fixed styling with overflow

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -63,6 +63,10 @@ main{
 		background-position : center;
 		background-image    : url('../assets/iphone.png');
 	}
+
+	>section{
+		overflow: hidden;
+	}
 }
 
 /* Media queries */
