--- a/app/styles/transitions.scss
+++ b/app/styles/transitions.scss
@@ -90,7 +90,7 @@
 .center-scale-up-appear{
 	opacity: 0;
 	border-radius: 50%;
-	transform:scale3d(0,0,0);
+	transform:scale3d(0.8,0.8,0.8);
 }
 .center-scale-up-appear.center-scale-up-appear-active{
 	opacity: 1;
@@ -110,7 +110,7 @@
 .center-scale-up-leave.center-scale-up-leave-active{
 	opacity: 0;
 	border-radius: 50%;
-	transform:scale3d(0,0,0);
+	transform:scale3d(0.8,0.8,0.8);
 	transition: all .25s ease-out;
 }
 
